[gd_scene load_steps=8 format=2]

[ext_resource path="res://Juego/UI/MiniMapa/TexturaMiniMapa.png" type="Texture" id=1]
[ext_resource path="res://Juego/UI/MiniMapa/SpritesMiniMapa/SpriteMiniMapaJugador.png" type="Texture" id=2]
[ext_resource path="res://Juego/UI/MiniMapa/Minimapa.gd" type="Script" id=3]
[ext_resource path="res://Juego/UI/MiniMapa/SpritesMiniMapa/SpriteMiniMapaEstacionEnemiga.png" type="Texture" id=4]
[ext_resource path="res://Juego/UI/MiniMapa/SpritesMiniMapa/SpriteMiniMapaEstacionRecarga.png" type="Texture" id=5]
[ext_resource path="res://Juego/UI/MiniMapa/SpritesMiniMapa/SpriteMiniMapaPuertaL.png" type="Texture" id=6]
[ext_resource path="res://Juego/UI/MiniMapa/SpritesMiniMapa/SpriteMiniMapaEnemigo2.png" type="Texture" id=7]

[node name="Minimapa" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 186, 105 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_right = 186.0
margin_bottom = 105.0
texture = ExtResource( 1 )

[node name="ContenedorSprites" type="MarginContainer" parent="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ZonaRenderizado" type="TextureRect" parent="NinePatchRect/ContenedorSprites"]
margin_right = 176.0
margin_bottom = 95.0

[node name="Sprite" type="Sprite" parent="NinePatchRect/ContenedorSprites/ZonaRenderizado"]
position = Vector2( 88, 47.5 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="SpriteAmbusher" type="Sprite" parent="NinePatchRect/ContenedorSprites/ZonaRenderizado"]
visible = false
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 85.6189, 75.6764 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 7 )

[node name="SpritePuertaL" type="Sprite" parent="NinePatchRect/ContenedorSprites/ZonaRenderizado"]
visible = false
modulate = Color( 0.933333, 0.878431, 0.0196078, 1 )
position = Vector2( 149.512, 67.3425 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 6 )

[node name="SpriteEstacionRecarg" type="Sprite" parent="NinePatchRect/ContenedorSprites/ZonaRenderizado"]
visible = false
modulate = Color( 0, 0.882353, 0.909804, 1 )
position = Vector2( 35.5, 58.5 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="SpriteEstacionEnem" type="Sprite" parent="NinePatchRect/ContenedorSprites/ZonaRenderizado"]
visible = false
modulate = Color( 0.756863, 0, 0, 1 )
position = Vector2( 150, 33 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 4 )

[node name="TweenActivacion" type="Tween" parent="."]

[node name="TimerActivacion" type="Timer" parent="."]
wait_time = 7.0
one_shot = true

[connection signal="timeout" from="TimerActivacion" to="." method="_on_TimerActivacion_timeout"]
